[package]
name = "bug-repro-zbus-drop-doesnt-disconnect"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.8"
tokio = { version = "1.25.0", default-features = false, features = [
  "rt",
  "macros",
  "sync",
  "rt-multi-thread",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
zbus = { version = "3.8.0", features = ["tokio"] }
